syntax = "proto3";
package mun.mun;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "mun/params.proto";
// this line is used by starport scaffolding # 1

option go_package = "mun/x/mun/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mun/mun/params";
  }
  // Queries a list of Airdrop items.
	rpc Airdrop(QueryAirdropRequest) returns (QueryAirdropResponse) {
		option (google.api.http).get = "/mun/mun/airdrop";
	}

// Queries a list of Airdrops items.
	rpc Airdrops(QueryAirdropsRequest) returns (QueryAirdropsResponse) {
		option (google.api.http).get = "/mun/mun/airdrops";
	}

// Queries a list of ClaimRecord items.
	rpc ClaimRecord(QueryClaimRecordRequest) returns (QueryClaimRecordResponse) {
		option (google.api.http).get = "/mun/mun/claim_record";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryAirdropRequest {
}

message QueryAirdropResponse {
}

message QueryAirdropsRequest {
}

message QueryAirdropsResponse {
}

message QueryClaimRecordRequest {
}

message QueryClaimRecordResponse {
}

// this line is used by starport scaffolding # 3
